--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CodeQL
+name: CI
 
 concurrency:
   cancel-in-progress: true
@@ -11,12 +11,12 @@ on:
   pull_request:
     branches:
       - master
-  schedule:
-    - cron: "9 8 * * 4"
 
 jobs:
-  analyze:
+  codeql:
     uses: ppizarror/workflow-actions/.github/workflows/codeql.yml@master
     with:
       language: javascript
-      os: ubuntu-latest
+
+  eslint:
+    uses: ppizarror/workflow-actions/.github/workflows/eslint.yml@master
