Tests now works

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "lint:js": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "lint": "npm run lint:js"
+    "lint": "npm run lint:js",
+    "test": "cd ./node_modules/karma/bin/ && karma start ../../../karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -29,8 +30,9 @@
   "homepage": "https://github.ppizarror.com/ThreeMineSweeper",
   "dependencies": {
     "eslint": "^8.32.0",
-    "karma": "^6.4.1",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^3.1.1",
-    "karma-jasmine": "^5.1.0"
+    "karma-coverage": "^1.1.2",
+    "karma-jasmine": "^4.0.2"
   }
 }
