--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,15 @@ on:
       - master
 
 jobs:
+  test:
+    uses: ppizarror/workflow-actions/.github/workflows/test_js.yml@master
+
   codeql:
+    needs: test
     uses: ppizarror/workflow-actions/.github/workflows/codeql.yml@master
     with:
       language: javascript
 
   eslint:
+    needs: test
     uses: ppizarror/workflow-actions/.github/workflows/eslint.yml@master
