--- a/package.json
+++ b/package.json
@@ -28,16 +28,14 @@
     "url": "https://github.com/ppizarror/ThreeMineSweeper/issues"
   },
   "homepage": "https://github.ppizarror.com/ThreeMineSweeper",
-  "dependencies": {
+  "devDependencies": {
+    "@types/jquery": "^3.5.32",
+    "@types/three": "^0.125.0",
     "eslint": "^9.26.0",
+    "google-closure-compiler": "^20260106.0.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "^3.1.1",
     "karma-coverage": "^2.2.0",
     "karma-jasmine": "^5.1.0"
-  },
-  "devDependencies": {
-    "@types/jquery": "^3.5.32",
-    "@types/three": "^0.125.0",
-    "google-closure-compiler": "^20260106.0.0"
   }
 }
